  * syntax/coverage highlighiting
    - editor always started with coverage highlighting enabled
    - Colorize coverage: 
      * disabled if lst file older than source file or deleted
      * tweaked line number translation
      * now searches for coverage generated files in last execution folders
      * added new command "Delete Coverage Files"
    - after changing the "Colored types" the current editor did not update immediately
    - user type colorizer settings were forgotten after editing options
    - keywords can now also be colored by adding them to the "Colored types"
  * DParser
    - updated to recent version (7fa55a843e2c36a28e8ce08a697b7972fc26d737)
    - enabled mixin analysis
    - pass deprecation flag to engine
  * vdserver
    - add __FUNCTION__, __PRETTY_FUNCTION__ and __MODULE__ as keywords and primary expression
    - add __parameters as specification in is-expression
  * build system
    - fixed building with -op and source files on different drive than project
    - added file options per configuration
    - fixed invoking bad command when no files to compile, but additional arguments set
    - added global option to display the reason for building a target
    - fixed custom build rules executed twice sometimes
	- link dependencies can now also be monitored for the 32-bit MS linker
	- added VCINSTALLDIR to the list of available macros
	- added different options for executable and librarie search paths to be used for Win32/x64
	- x64: linker settings from sc.ini can be overwritten 
	- x64: linker no longer invoked through dmd
  * miscellaneous
    - added command "Open Folder in Windows Explorer" to project and folder context menu
    - goto definition now falls back to JSON information if semantic analysis yields no result
    - improved indentation after opening parenthesis to follow next token
    - added commands "Collapse unittests" and "Collapse disabled" to the outlining menu
  * changed license to Boost